Fix banner readability for some locales (#2058)

--- a/less/pages/thunderbird.less
+++ b/less/pages/thunderbird.less
@@ -3,9 +3,11 @@
     text-align: center;
     background: #fff;
     h3 {
+      font-size: 18px;
       font-weight: 700;
       font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }  
+      line-height: 1.5;
+    }
   }
 
   &.thank-you-page,
